--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/town_hall_logo.gif">
 	<link rel="stylesheet" href="styles/normalize.css">
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/slicknav.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="js/jquery.slicknav.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('#nav_menu').slicknav({prependTo:"#mobile_menu"});
+		});
+	</script>
 </head>
 
 <body>
@@ -15,7 +24,7 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="shadow" id="shadow">75<sup>th</sup></em> Year</h3>
 	</header>
-
+	<nav id="mobile_menu"></nav>
 	<nav id = 'nav_menu'>
 		<ul>
 			<li><a href="index.html" class="current">Home</a> </li>
@@ -78,7 +87,7 @@
 
 	</main>
 	<footer>
-		<p>&#169 Desimir Berardo 11/11/2020</p>
+		<p>&#169 Desimir Berardo 11/17/2020</p>
 	</footer>
 </body>
 </html>
